<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/toolbar"
             app:layout_scrollFlags="scroll|enterAlways"/>

    <View android:layout_width="match_parent"
          android:layout_height="@dimen/size380"
          android:layout_marginTop="@dimen/size110"
          android:background="@color/shadow"/>

    <View android:id="@+id/logo"
          android:layout_width="@dimen/size160"
          android:layout_height="@dimen/size160"
          android:layout_marginTop="@dimen/size140"
          android:layout_marginStart="@dimen/size63"
          android:layout_centerHorizontal="true"
          android:background="@drawable/ic_exawallet_black"/>

    <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size40"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:text="@string/exa"
            android:textColor="@color/orange"
            android:textSize="@dimen/text40"/>

    <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size100"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:text="@string/wallet"
            android:textColor="@color/black"
            android:textSize="@dimen/text40"/>

    <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size40"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/size250"
            android:layout_alignParentEnd="true"
            android:text="@string/build_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text32"/>

    <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size40"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/size250"
            android:layout_alignParentStart="true"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="@dimen/text32"/>
</RelativeLayout>