<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <include layout="@layout/toolbar"
             app:layout_scrollFlags="scroll|enterAlways"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/MainTextInputLayout"
            android:layout_marginTop="@dimen/size140">
        <com.devspark.robototextview.widget.RobotoEditText
                android:id="@+id/password"
                style="@style/SingleBlackInputEditText"
                android:hint="@string/prompt_wallet_password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <View android:id="@+id/security"
          android:layout_width="@dimen/size4"
          android:layout_height="@dimen/size10"
          android:background="@color/shadow"
          android:layout_below="@+id/password_layout"
          android:layout_gravity="start"
          android:layout_marginTop="@dimen/size20"
          android:layout_marginStart="@dimen/size40"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_layout"
            style="@style/MainTextInputLayout"
            android:layout_below="@id/security"
            android:layout_marginTop="@dimen/size32">
        <com.devspark.robototextview.widget.RobotoEditText
                android:id="@+id/confirm"
                style="@style/SingleBlackInputEditText"
                android:hint="@string/prompt_confirm_wallet_password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/continue_button"
            style="@style/MainBottomButton"
            android:enabled="false"
            android:text="@string/action_save_changes"/>
</RelativeLayout>