<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="@dimen/size600"
             android:layout_height="@dimen/size480"
             android:background="@color/shadow">

    <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size80"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_wallet_password"
            android:textSize="@dimen/text40"
            android:textColor="@color/black"/>

    <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/size180"
            style="@style/MainDialogTextInputLayout">

        <com.devspark.robototextview.widget.RobotoEditText
                android:id="@+id/password"
                android:hint="@string/prompt_wallet_password"
                android:inputType="textPassword"
                style="@style/SingleBlackInputEditText"/>
    </android.support.design.widget.TextInputLayout>

    <View android:id="@+id/hide_password"
          android:layout_width="@dimen/size63"
          android:layout_height="@dimen/size63"
          android:background="@drawable/ic_visibility_off_gray"
          android:layout_gravity="end"
          android:layout_marginTop="@dimen/size180"
          android:layout_marginEnd="@dimen/size40"/>

    <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/size40"
            android:layout_marginStart="@dimen/size40"
            android:layout_marginBottom="@dimen/size40"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/action_continue"
            android:textSize="@dimen/text28"
            android:textColor="@color/white"
            android:background="@drawable/background_button"/>
</FrameLayout>