<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

    <include layout="@layout/toolbar"
             app:layout_scrollFlags="scroll|enterAlways"/>

    <com.devspark.robototextview.widget.RobotoTextView
            style="@style/AccentText"
            android:layout_marginTop="@dimen/size140"
            android:layout_marginStart="@dimen/size40"
            android:layout_marginEnd="@dimen/size40"
            android:text="@string/save_mnemonic"/>

    <GridView android:id="@+id/mnemonic"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/size220"
              android:layout_marginStart="@dimen/size40"
              android:layout_marginEnd="@dimen/size40"
              android:numColumns="auto_fit"
              android:columnWidth="@dimen/size160"
              android:stretchMode="columnWidth"/>

    <com.devspark.robototextview.widget.RobotoTextView
            style="@style/MultiNoteText"
            android:layout_below="@+id/mnemonic"
            android:layout_marginTop="@dimen/size63"
            android:layout_marginStart="@dimen/size40"
            android:layout_marginEnd="@dimen/size40"
            android:text="@string/insert_words"/>

    <GridView
            android:id="@+id/secrets"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mnemonic"
            android:layout_marginTop="@dimen/size140"
            android:layout_marginStart="@dimen/size63"
            android:layout_marginEnd="@dimen/size63"
            android:numColumns="auto_fit"
            android:columnWidth="@dimen/size200"
            android:stretchMode="spacingWidthUniform"/>

    <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/continue_button"
            style="@style/MainBottomButton"
            android:text="@string/action_skip_confirm"/>
</RelativeLayout>