<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

    <include layout="@layout/toolbar"
             app:layout_scrollFlags="scroll|enterAlways"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size125">
        <View android:id="@+id/scan_button"
              android:layout_width="@dimen/size160"
              android:layout_height="@dimen/size160"
              android:layout_alignParentEnd="true"
              android:layout_marginEnd="@dimen/size20"
              android:background="@drawable/ic_scan"/>

        <com.devspark.robototextview.widget.RobotoTextView
                style="@style/SmallSingleNoteText"
                android:layout_marginStart="@dimen/size40"
                android:layout_marginEnd="@dimen/size220"
                android:layout_centerVertical="true"
                android:text="@string/insert_invite_code"
                android:maxLines="3"/>
    </RelativeLayout>

    <View android:layout_width="match_parent"
          android:layout_height="@dimen/size300"
          android:layout_marginStart="@dimen/size40"
          android:layout_marginEnd="@dimen/size40"
          android:layout_marginTop="@dimen/size320"
          android:background="@drawable/border"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/invite_code_layout"
            style="@style/MainTextInputLayout"
            android:layout_marginTop="@dimen/size280">
        <com.devspark.robototextview.widget.RobotoEditText
                android:id="@+id/invite_code"
                style="@style/MultiInputEditText"
                android:lines="6"
                android:hint="@string/action_insert_invite_code"
                android:translationY="@dimen/size25"
                android:padding="@dimen/size20"
                android:gravity="top"
                android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/continue_button"
            style="@style/MainBottomButton"
            android:text="@string/action_continue"/>
</RelativeLayout>